# detect_os

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpu_count.cpp  cpu_count.h  hw_info.cpp  hw_info.hpp  is_64bit.hpp  main.cpp
